<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="@drawable/input"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/full_name"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/register"
        tools:layout_editor_absoluteX="16dp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:fontFamily="@font/montserrat_regular"
        android:background="@drawable/input"
        app:layout_constraintTop_toBottomOf="@id/full_name"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textPassword"
        />

    <Spinner
        android:id="@+id/code_pinner"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/list_small"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password">

    </Spinner>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/input_medium"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:hint="@string/number"
        android:padding="10dp"
        android:inputType="number"
        />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:fontFamily="@font/montserrat_regular"
        android:background="@drawable/input"
        app:layout_constraintTop_toBottomOf="@id/code_pinner"
        android:hint="@string/email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        />

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_margin="14dp"
        android:fontFamily="@font/montserrat_regular"
        android:background="@drawable/list"
        >
    </Spinner>

    <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/country_spinner"
        app:layout_constraintTop_toBottomOf="@id/country_spinner"
        android:layout_margin="14dp"
        android:fontFamily="@font/montserrat_regular"
        android:background="@drawable/list"
        >
    </Spinner>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:padding="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/terms_text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/city_spinner"
        app:layout_constraintBottom_toTopOf="@id/change_language"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@id/city_spinner"
        app:layout_constraintBottom_toTopOf="@id/change_language"
        app:layout_constraintStart_toEndOf="@id/text"
        android:textColor="@color/colorPrimary"
        android:text="@string/terms_and_conditions"
        />

    <Button
        android:id="@+id/change_language"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimaryDark"
        android:text="@string/change_language"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorAccent"
        android:autoLink="web"
        />


</android.support.constraint.ConstraintLayout>